* icompare from str.fs to config.fs (2007-02-06)
* fina config.fs/make.fs added (thanks to Jorge Acereda Macia)
* Manual added to the website
0.4.0:
* dtm: new words dtm-get-date and dtm-get-time
* dtm: dtm-set-with-days bug fix 
* tst: tst-get-result will now also return ms since tst-reset-tests (2007-01-07)
* dci: new module (Double linked cell list iterator) (2007-01-07)
* dni: new module (Double linked node list iterator) (2007-01-03)
* dcl: new module (Double linked cell list) (2006-12-31)
* dcn: new module (Double linked cell list node) (2006-12-31)
* dnl: new module (Double linked node list) (2006-12-28)
* dnn: new module (Double linked list node) (2006-12-28)
* Win32Forth config.fs/make.fs added
* config: new word <=> for comparing numbers (2006-12-12)
* chs: new words chs-set-string,chs-reset-string (2006-12-11)
* Comment cleanup (2006-12-10)
* tmr: new module (Interval timer) (2006-12-8)
* crc: word scr-free renamed to crc-free (bug)
* crc: word crc-start renamed to crc-reset
* sh1: new module (Secure Hash 1) (2006-12-04)
* trm: new module (Terminal escape sequences outputter) (2006-11-17)
* bci: new module (Binary cell tree iterator) (2006-10-03)
* bct: new module (Binary cell tree) (2006-10-03)
* bcn: new module (Binary cell tree node) (2006-10-03)
* act: new module (AVL cell binary tree) (2006-09-24)
* acn: new module (AVL cell tree node) (2006-09-23)
* rng: new module (Pseudo Random Number Generator) (2006-09-15)
* tst: partly rewritten: reporting more info; no change in interface (2006-09-12)
* config: new words ftuck, fnip, f2dup, f-rot, 0e0, 1e0, 2e0 (2006-09-11)
* config: new words: f>r fr> fr@ (2006-08-30)  
* config: sys.cells-in-float added (2006-08-30)
* cpx: new module (Complex number) (2006-08-28)
* frc: new module (Fraction) (2006-08-26)
0.3.0:
* config: sys.bits-in-byte added
* config: sys.bits-in-cell added
* config: sys.bits-in-char added
* chs: new module (Character Set)
* crc: word crc-calc-crc32 renamed to crc+calc-crc32