@@ -1,3 +1,4 @@
+* snn: new module (Single linked node) (2007-02-19)
 * icompare from str.fs to config.fs (2007-02-06)
 * fina config.fs/make.fs added (thanks to Jorge Acereda Macia)
 * Manual added to the website
